# nba-project

./: .gitignore  2019_2020_advanced_player_stats.csv  README.md  Visualize.js  clean_containers.sh  load_csv.sh  package-lock.json  package.json  restart_server.sh  start-mongo.sh  table-csv.sh
backend-api/: app.py  cert.pem  client.csr  client.key  client.pem  dev.sh  index.html  key.pem  nba.service  players.txt  pyproject.toml  requirements.txt  root_ca.crt  root_ca.key  root_ca.pem  run_tests.sh  server.py  tests.py
backend-api/app/: .___init__.py  ._settings.py  __init__.py  mongo_interace.py  settings.py
backend-api/app/database/: ._mongo_interace.py  mongo_interace.py
backend-api/app/utils/: flask_utils.py
backend-api/app/views/: ._main.py  __init__.py  main.py
backend-api/image/: Dockerfile  entrypoint.sh
nba-db/: .gitignore  README.md  package-lock.json  package.json
nba-db/public/: index.html
nba-db/src/: App.css  App.js  Routes.js
nba-db/src/components/: Header.jsx  Home.js  Navbar.js  NotFound.js  Recharts.js  ResultsTable.js  Search.js  SearchComponent.js  SearchResults.js  SelectStage.js  StaticPlayerList.js  Visualize.js  players.txt  template.js  theme.js
nba-db/src/components/visuals/: NivoLineChart.js
nba-db/src/functions/: search.js
nba-db/src/styles/: template.css
